# hyperscript

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: create-release.yml  python-continuous-integration.yaml  python-package.yml  python-publish.yml
hyperscript/: __init__.py  element.py
tests/: test_element.py
